build: add `enable-preview` args